@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-10-30T01:14:31Z",
+  "timestamp" : "2024-10-31T01:15:10Z",
   "count_outdated" : 1339,
   "uniques_outdated" : 375,
-  "count" : 1345,
-  "uniques" : 378,
+  "count" : 1346,
+  "uniques" : 379,
   "views" : [
     {
       "timestamp": "2024-10-17T00:00:00Z",
@@ -28,6 +28,15 @@
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
