@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 3,
+  "count": 7,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2024-10-17T00:00:00Z",
@@ -15,6 +15,11 @@
     {
       "timestamp": "2024-10-29T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-30T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
